@@ -1,4 +1,4 @@
-.TH phoronix-test-suite 1  "www.phoronix-test-suite.com" "9.6.0m2"
+.TH phoronix-test-suite 1  "www.phoronix-test-suite.com" "9.6.0m3"
 .SH NAME
 phoronix-test-suite \- The Phoronix Test Suite is an extensible open-source platform for performing testing and performance evaluation.
 .SH SYNOPSIS
@@ -292,6 +292,9 @@ This option will read a saved test results file and output the system hardware a
 .TP
 .B show-result [Test Result]
 Open up the test results in the Phoronix Test Suite Result Viewer or on OpenBenchmarking.org.
+.TP
+.B workload-topology [Test Result]
+This option will read a saved test results file and print the test profiles contained within and their arrangement within different test suites for getting an idea as to the workload topology/make-up / logical groupings of the benchmarks being run.
 .TP
 .SH OTHER
 .B commands
