@@ -289,6 +289,9 @@
 <h3>show-result<em>  [Test Result]</em>
 </h3>
 <p>Open up the test results in the Phoronix Test Suite Result Viewer or on OpenBenchmarking.org.</p>
+<h3>workload-topology<em>  [Test Result]</em>
+</h3>
+<p>This option will read a saved test results file and print the test profiles contained within and their arrangement within different test suites for getting an idea as to the workload topology/make-up / logical groupings of the benchmarks being run.</p>
 <h1>Other</h1>
 <h3>commands<em>  </em>
 </h3>
