@@ -294,9 +294,9 @@ function pts_version_codenames()
 		);
 }
 
-pts_define('PTS_VERSION', '9.6.0m2');
-pts_define('PTS_CORE_VERSION', 9520);
-pts_define('PTS_RELEASE_DATE', '20200405');
+pts_define('PTS_VERSION', '9.6.0m3');
+pts_define('PTS_CORE_VERSION', 9530);
+pts_define('PTS_RELEASE_DATE', '20200412');
 pts_define('PTS_CODENAME', 'Nittedal');
 
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && strstr(PTS_MODE, 'CLIENT') !== false));
